Bug 54597 - Log pollution graceful kill fail, sending SIGKILL
Summary: Log pollution graceful kill fail, sending SIGKILL
Status: CLOSED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_fcgid (show other bugs)
Version: 2.5-HEAD
Hardware: PC All
: P2 trivial (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: PatchAvailable
Depends on:
Blocks:
 
Reported: 2013-02-22 13:24 UTC by Mario
Modified: 2014-06-21 17:40 UTC (History)
1 user (show)



Attachments
Setting logging on Windows to APLOG_DEBUG (929 bytes, patch)
2013-02-22 13:24 UTC, Mario
Details | Diff
Smaller version of the windows patch (thanks to gsmith) (673 bytes, patch)
2014-06-20 09:33 UTC, Mario
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mario 2013-02-22 13:24:51 UTC
Created attachment 29981 [details]
Setting logging on Windows to APLOG_DEBUG

Since on Windows mostly the process ends with "graceful kill fail, sending SIGKILL" there is a possible log pollution.
Comment 1 Gregg L. Smith 2013-02-27 17:45:02 UTC
Has my vote, this gets really noisy on a busy server heavy with php.
Comment 2 Steffen 2013-02-27 18:26:15 UTC
+1
Comment 3 Mario 2014-06-20 09:33:20 UTC
Created attachment 31734 [details]
Smaller version of the windows patch (thanks to gsmith)
Comment 4 Yann Ylavic 2014-06-20 10:21:39 UTC
Commited in r1604123.
Comment 5 Mario 2014-06-21 17:40:47 UTC
Thanks for the review and for appling my patch.