Lower log "graceful kill fail, sending SIGKILL" level to DEBUG on Windows. PR 54597.

Submitted by: Mario Brandt <JBlond gmail.com>
Reviewed by: gsmith


git-svn-id: https://svn.apache.org/repos/asf/httpd/mod_fcgid/trunk@1604123 13f79535-47bb-0310-9956-ffa450edef68